Added "Convert to number" machine and tests

--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   ],
   "author": "The Treeline Company",
   "license": "MIT",
-  "dependencies":{
+  "dependencies": {
     "machine": "^12.3.0"
   },
   "devDependencies": {
-    "test-machinepack-mocha": "^2.0.0"
+    "test-machinepack-mocha": "^2.1.5"
   },
   "machinepack": {
     "friendlyName": "Numbers",
     "machineDir": "machines/",
-    "machines": []
+    "machines": [
+      "to-number"
+    ]
   }
 }
