Added "is-numeric" machine

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "friendlyName": "Numbers",
     "machineDir": "machines/",
     "machines": [
-      "to-number"
+      "to-number",
+      "is-numeric"
     ]
   }
 }
