--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "The Treeline Company",
   "license": "MIT",
   "dependencies": {
-    "machine": "^12.3.0"
+    "machine": "^13.0.0-11"
   },
   "devDependencies": {
     "test-machinepack-mocha": "^2.1.5"
